# forex_bot

./: readme.txt
ForexConnectAPI-1.1.2-Linux-i686/doc/: license.txt  readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CheckPermissions/: CMakeLists.txt  fxbuild.sh  readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CloseAllPositions/: CMakeLists.txt  readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateELS/: CMakeLists.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateELS/source/: main.cpp
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateEntry/: readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateEntryAndFindOrder/: CMakeLists.txt  fxbuild.sh
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateOCO/: CMakeLists.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/GetHistPrices/: CMakeLists.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/GetOffers/: fxbuild.sh  readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/GetReportUrl/: CMakeLists.txt  fxbuild.sh
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/JoinExistingGroup/: fxbuild.sh  readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/JoinNewGroup/: readme.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/TwoConnection/: CMakeLists.txt  fxbuild.sh
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/SimpleSamples/NonTableManagerSamples/TwoConnection/source/: EventListener.cpp  PermissionCheckerSample.cpp  SessionStatusListener.h  TradingSettingsProviderSample.cpp
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/WholeSample/: CMakeCache.txt  CMakeLists.txt
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/WholeSample/source/: CreateOrderSample.cpp  CreateOrderSample.h  EventListener.cpp  EventListener.h  PermissionCheckerSample.cpp  ResponseListener.cpp  SessionStatusListener.cpp  WholeSample.cpp  stdafx.h
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/threadlib/include/: CWinEventHandle.h  Mutex.h  threadlib.h  winEmul.h
ForexConnectAPI-1.1.2-Linux-i686/samples/cpp/threadlib/source/: CWinEventHandle.cpp  winevent.cpp
ForexConnectAPIRobot/: aman_robot.cpp
ForexConnectAPIRobot/include/: IO2GLoginRules.h  IO2GSession.h  IO2GTimeFrame.h  O2GEnum.h  interfaces_all.h  io2gtable.h
ForexConnectAPIRobot/include/Readers/: IO2GMarketDataSnapshotResponseReader.h  IO2GOrderResponseReader.h  IO2GTablesUpdatesReader.h
ForexConnectAPIRobot/include/Rows/: IO2GAccountRow.h
ForexConnectAPIRobot/lib/: libgstool2.so.1.1.2  liborder2go2.so.1.1.2  libpdas.so.1.1.2
ForexConnectAPIRobot/lib/java/: libfxcore2.so.1.1.2
ForexConnectAPIRobot/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateOTO/: CMakeLists.txt  fxbuild.sh  readme.txt
ForexConnectAPIRobot/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateOTO/include/: Example.h  ExampleBase.h  ResponseListener.h  Session.h
ForexConnectAPIRobot/samples/cpp/SimpleSamples/NonTableManagerSamples/CreateOTO/source/: ResponseListener.cpp  Session.cpp  main.cpp
ForexConnectAPIRobot/samples/cpp/WholeSample/: Makefile  cmake_install.cmake  fxbuild.sh
ForexConnectAPIRobot/samples/cpp/WholeSample/source/: ResponseListener.h  ResponseQueue.cpp  ResponseQueue.h
ForexConnectAPIRobot/samples/cpp/threadlib/: notice.txt
ForexConnectAPIRobot/samples/cpp/threadlib/source/: AThread.cpp  Mutex.cpp
ForexConnectAPIRobot/samples/java/WholeSample/: build.xml
ForexConnect_Sample_Linux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fxbuild.sh
ForexConnect_Sample_Linux/include/: IAddRef.h  IO2GColumn.h  IO2GLoginRules.h  IO2GPermissionChecker.h  IO2GRequest.h  IO2GSession.h  IO2GTimeFrame.h  IO2GTradingSettingsProvider.h  O2GEnum.h  O2GOrderType.h  O2GRequestParamsEnum.h  O2GTransport.h  Order2Go2.h  interfaces_all.h  io2gresponse.h  io2gtable.h  o2g2ptr.h
ForexConnect_Sample_Linux/include/Readers/: IO2GCommandResponseReader.h  IO2GMarketDataSnapshotResponseReader.h  IO2GOrderResponseReader.h  IO2GSystemProperties.h  IO2GTablesUpdatesReader.h  IO2GTimeConverter.h
ForexConnect_Sample_Linux/include/Rows/: IO2GAccountRow.h  IO2GClosedTradeRow.h  IO2GMessageRow.h  IO2GOfferRow.h  IO2GOrderRow.h  IO2GTradeRow.h
ForexConnect_Sample_Linux/source/: sample.cpp  stdafx.cpp  stdafx.h
_DO_NOT_USE_forexConnectAPIRobot/forexConnectRobot/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fxbuild.sh
_DO_NOT_USE_forexConnectAPIRobot/forexConnectRobot/source/: SimpleLog.h  TradingSettingsProviderSample.cpp  TradingSettingsProviderSample.h  forectConnectRobot.cpp  stdafx.cpp
_DO_NOT_USE_forexConnectAPIRobot/include/: IO2GTradingSettingsProvider.h  O2GOrderType.h  O2GRequestParamsEnum.h  O2GTransport.h  io2gresponse.h
_DO_NOT_USE_forexConnectAPIRobot/include/Rows/: IO2GTradeRow.h
_DO_NOT_USE_forexConnectAPIRobot/lib/: librtmp2tp.so.1.1.2
_DO_NOT_USE_forexConnectAPIRobot/threadlib/: CMakeLists.txt
_DO_NOT_USE_forexConnectAPIRobot/threadlib/include/: AThread.h
_DO_NOT_USE_forexConnectAPIRobot/threadlib/source/: stdhead.h
cpp/: a.out  arg.cpp  hello_world.cpp  sample_app_for_forex_connect_api.cpp
data_download/: import_data_DO_NOT_USE.rb
data_download/GBPUSD/: GBPUSD1d.txt  GBPUSD1d_100l.txt
data_download/sql/: data_import.sql
forexrobot/: array_test_plot.rb  download_rates_xml.rb  forex_connect_API_call.rb  forex_robot.rb  forex_test.rb  parse_csv.rb  run_forex_robot.rb  sin_wav_test_plot.rb
rails_projects/userapp/: Gemfile
rails_projects/userapp/app/views/layouts/: _test.html.erb  application.html.erb
rails_projects/userapp/config/: secrets.yml
rails_projects/userapp/db/: schema.rb
shell_scripts/: test.sh
(+364 files in other folders)
